# rust-example_yew-template

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  Trunk.toml  frontend-558327004a56ce8.js  frontend-558327004a56ce8_bg.wasm  frontend-7d99b45686aee35f.js  frontend-7d99b45686aee35f_bg.wasm  frontend-a8cd3a65946f38f6.js  frontend-a8cd3a65946f38f6_bg.wasm  frontend-bed5a5b77465f2d1.js  frontend-bed5a5b77465f2d1_bg.wasm  frontend-c9230d266394754d.js  frontend-c9230d266394754d_bg.wasm  frontend-eaf23e42a6ac4c05.js  frontend-eaf23e42a6ac4c05_bg.wasm  frontend-example-1664633f3bd08faa.js  frontend-example-1664633f3bd08faa_bg.wasm  frontend-example-2e549d9034f41e4.js  frontend-example-2e549d9034f41e4_bg.wasm  frontend-example-3b5141e7be253f4.js  frontend-example-3b5141e7be253f4_bg.wasm  frontend-example-603bd93f4a5a283b.js  frontend-example-603bd93f4a5a283b_bg.wasm  frontend-example-8b4d177b1991a3cf.js  frontend-example-8b4d177b1991a3cf_bg.wasm  frontend-example-943947b0a6c499e5.js  frontend-example-943947b0a6c499e5_bg.wasm  frontend-example-9c2824a106a59470.js  frontend-example-9c2824a106a59470_bg.wasm  frontend-example-ba4abbc753b5849a.js  frontend-example-ba4abbc753b5849a_bg.wasm  frontend-example-bd1ba1d579fd811c.js  frontend-example-bd1ba1d579fd811c_bg.wasm  frontend-example-d70ce21c45892e4e.js  frontend-example-fac742fe4fe82d3c.js  frontend-example-fac742fe4fe82d3c_bg.wasm  index.html  main-25940dbea4bb4ff1.css  (+6 more)
.github/workflows/: publish_gh_pages.yml
css/: index.css  index.scss  main.scss
css/tailwind/: tailwind_base.css
src/: app.rs  main.rs
