[package]
name = "frontend-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
serde = "1.0.117"
reqwasm = "0.4.1"
gloo = "0.6.0"
yew-router = "0.16.0"
seed = "0.9.2"
enclose = "1.1.8"
indexmap = "1.9.2"
uuid = "1.2.2"
yew-hooks = "0.2.0"

[dependencies.web-sys]
version = "0.3.56"
features = [
    "HtmlInputElement",
]
